--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo-google-fonts/outfit": "^0.4.2",
     "@expo-google-fonts/poppins": "^0.4.0",
+    "@expo/vector-icons": "^14.1.0",
     "expo": "~53.0.20",
     "expo-constants": "~17.1.7",
     "expo-font": "~13.3.2",
