--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "0.79.5",
+    "react-native-audio-recorder-player": "^4.3.0",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1"
   },
