chore: update dependencies and scripts in package.json
- Changed start scripts for Android and iOS to use `expo run` instead of `expo start`.
- Updated expo version from 53.0.20 to 53.0.22.
- Added expo-image dependency.
- Updated expo-router from 5.1.4 to 5.1.5.
- Added react-native-gesture-handler and react-native-reanimated dependencies.
- Added react-native-video and react-native-worklets dependencies.
- Updated read.md to include installation command for new dependencies.

--- a/app.json
+++ b/app.json
@@ -21,14 +21,16 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "edgeToEdgeEnabled": true
+      "edgeToEdgeEnabled": true,
+      "package": "com.anonymous.aurealis"
     },
     "web": {
       "favicon": "./assets/favicon.png"
     },
     "plugins": [
       "expo-router",
-      "expo-font"
+      "expo-font",
+      "react-native-video"
     ]
   }
 }
